Documentation: record that the connector does not authenticate its caller
Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>